--- a/index.html
+++ b/index.html
@@ -7,17 +7,56 @@
     <link rel="stylesheet" href="https://cdn.lineicons.com/2.0/LineIcons.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/animate.css">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <i class="lni lni-home"></i>
 
+ <!---Testimonial section-->
+<div id="testimonial" class="section-padding">
+  <div class="container">
+    <div class="item">
+      <div class="testimonial-item">
+        <img src="img/1.jpg" alt="Shanto">
+      </div>
+      <div class="info">
+        <h2>
+          <a href="#">Rakibul Hasan</a>
+        </h2>
+        <h3>
+          <a href="#">Web Designeer</a>
+        </h3>
+      </div>
+      <div class="contant">
+        <div class="description">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste beatae sequi recusandae. Consequuntur dolorem ab vero incidunt, dicta at quibusdam.</p>
+        </div>
+        <div class="star-icon">
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-half"></i>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
-    <script src="js/wow.min.js"></script>
+
     <script src="js/script.js"></script>
 
 </body>
