owl-carousel and owl-theme class add

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.lineicons.com/2.0/LineIcons.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -15,6 +15,7 @@
  <!---Testimonial section-->
 <div id="testimonial" class="section-padding">
   <div class="container">
+    <div class="owl-carousel owl-theme">
     <div class="item">
       <div class="testimonial-item">
         <img src="img/1.jpg" alt="Shanto">
@@ -50,13 +51,198 @@
         </div>
       </div>
     </div>
+    <!--Second persion item-->
+    <div class="item">
+      <div class="testimonial-item">
+        <img src="img/4.jpg" alt="Shanto">
+      </div>
+      <div class="info">
+        <h2>
+          <a href="#">Hasan Redoy</a>
+        </h2>
+        <h3>
+          <a href="#">Software Devloper</a>
+        </h3>
+      </div>
+      <div class="content">
+        <div class="description">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae distinctio porro vero illum iste accusamus voluptatem, dicta dignissimos incidunt mollitia?</p>
+        </div>
+        <div class="star-icon">
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <!--Therd persion item-->
+    <div class="item">
+      <div class="testimonial-item">
+        <img src="img/2.jpg" alt="Shanto">
+      </div>
+      <div class="info">
+        <h2>
+          <a href="#">Hasan Redoy</a>
+        </h2>
+        <h3>
+          <a href="#">Software Devloper</a>
+        </h3>
+      </div>
+      <div class="content">
+        <div class="description">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae distinctio porro vero illum iste accusamus voluptatem, dicta dignissimos incidunt mollitia?</p>
+        </div>
+        <div class="star-icon">
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <!--Forth persion item-->
+    <div class="item">
+      <div class="testimonial-item">
+        <img src="img/5.jpg" alt="Shanto">
+      </div>
+      <div class="info">
+        <h2>
+          <a href="#">Hasan Redoy</a>
+        </h2>
+        <h3>
+          <a href="#">Software Devloper</a>
+        </h3>
+      </div>
+      <div class="content">
+        <div class="description">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae distinctio porro vero illum iste accusamus voluptatem, dicta dignissimos incidunt mollitia?</p>
+        </div>
+        <div class="star-icon">
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <!--Fift persion item-->
+    <div class="item">
+      <div class="testimonial-item">
+        <img src="img/3.PNG" alt="Shanto">
+      </div>
+      <div class="info">
+        <h2>
+          <a href="#">Hasan Redoy</a>
+        </h2>
+        <h3>
+          <a href="#">Software Devloper</a>
+        </h3>
+      </div>
+      <div class="content">
+        <div class="description">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae distinctio porro vero illum iste accusamus voluptatem, dicta dignissimos incidunt mollitia?</p>
+        </div>
+        <div class="star-icon">
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <!--Six persion item-->
+    <div class="item">
+      <div class="testimonial-item">
+        <img src="img/1.jpg" alt="Shanto">
+      </div>
+      <div class="info">
+        <h2>
+          <a href="#">Hasan Redoy</a>
+        </h2>
+        <h3>
+          <a href="#">Software Devloper</a>
+        </h3>
+      </div>
+      <div class="content">
+        <div class="description">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae distinctio porro vero illum iste accusamus voluptatem, dicta dignissimos incidunt mollitia?</p>
+        </div>
+        <div class="star-icon">
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+          <span>
+            <i class="lni lni-star-filled"></i>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
 </div>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
-
+    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
 
 </body>
