--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--using this link to create the project responsive-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carousel Slider</title>
     <link rel="stylesheet" href="https://cdn.lineicons.com/2.0/LineIcons.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -12,233 +12,197 @@
 </head>
 <body>
 
- <!---Testimonial section-->
-<div id="testimonial" class="section-padding">
-  <div class="container">
-    <div class="owl-carousel owl-theme">
-    <div class="item">
-      <div class="testimonial-item">
-        <img src="img/1.jpg" alt="Shanto">
-      </div>
-      <div class="info">
-        <h2>
-          <a href="#">Rakibul Hasan</a>
-        </h2>
-        <h3>
-          <a href="#">Web Designeer</a>
-        </h3>
-      </div>
-      <div class="contant">
-        <div class="description">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste beatae sequi recusandae. Consequuntur dolorem ab vero incidunt, dicta at quibusdam.</p>
-        </div>
-        <div class="star-icon">
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-half"></i>
-          </span>
-        </div>
-      </div>
-    </div>
-    <!--Second persion item-->
-    <div class="item">
-      <div class="testimonial-item">
-        <img src="img/4.jpg" alt="Shanto">
-      </div>
-      <div class="info">
-        <h2>
-          <a href="#">Hasan Redoy</a>
-        </h2>
-        <h3>
-          <a href="#">Software Devloper</a>
-        </h3>
-      </div>
-      <div class="content">
-        <div class="description">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae distinctio porro vero illum iste accusamus voluptatem, dicta dignissimos incidunt mollitia?</p>
-        </div>
-        <div class="star-icon">
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-        </div>
-      </div>
-    </div>
-
-    <!--Therd persion item-->
-    <div class="item">
-      <div class="testimonial-item">
-        <img src="img/2.jpg" alt="Shanto">
-      </div>
-      <div class="info">
-        <h2>
-          <a href="#">Hasan Redoy</a>
-        </h2>
-        <h3>
-          <a href="#">Software Devloper</a>
-        </h3>
-      </div>
-      <div class="content">
-        <div class="description">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae distinctio porro vero illum iste accusamus voluptatem, dicta dignissimos incidunt mollitia?</p>
-        </div>
-        <div class="star-icon">
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-        </div>
-      </div>
-    </div>
-
-    <!--Forth persion item-->
-    <div class="item">
-      <div class="testimonial-item">
-        <img src="img/5.jpg" alt="Shanto">
-      </div>
-      <div class="info">
-        <h2>
-          <a href="#">Hasan Redoy</a>
-        </h2>
-        <h3>
-          <a href="#">Software Devloper</a>
-        </h3>
-      </div>
-      <div class="content">
-        <div class="description">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae distinctio porro vero illum iste accusamus voluptatem, dicta dignissimos incidunt mollitia?</p>
-        </div>
-        <div class="star-icon">
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-        </div>
-      </div>
-    </div>
-
-    <!--Fift persion item-->
-    <div class="item">
-      <div class="testimonial-item">
-        <img src="img/3.PNG" alt="Shanto">
-      </div>
-      <div class="info">
-        <h2>
-          <a href="#">Hasan Redoy</a>
-        </h2>
-        <h3>
-          <a href="#">Software Devloper</a>
-        </h3>
-      </div>
-      <div class="content">
-        <div class="description">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae distinctio porro vero illum iste accusamus voluptatem, dicta dignissimos incidunt mollitia?</p>
-        </div>
-        <div class="star-icon">
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-        </div>
-      </div>
-    </div>
-
-    <!--Six persion item-->
-    <div class="item">
-      <div class="testimonial-item">
-        <img src="img/1.jpg" alt="Shanto">
-      </div>
-      <div class="info">
-        <h2>
-          <a href="#">Hasan Redoy</a>
-        </h2>
-        <h3>
-          <a href="#">Software Devloper</a>
-        </h3>
-      </div>
-      <div class="content">
-        <div class="description">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae distinctio porro vero illum iste accusamus voluptatem, dicta dignissimos incidunt mollitia?</p>
-        </div>
-        <div class="star-icon">
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-          <span>
-            <i class="lni lni-star-filled"></i>
-          </span>
-        </div>
+    <div id="testimonial" class="section-padding">
+      <div class="container">
+          <div class="owl-carousel owl-theme wow fadeInUp" data-wow-delay="1s">
+              <div class="item">
+                  <div class="testimonial-item">
+                      <div class="img-thumb">
+                          <img src="img/t1.jpg" alt="David">
+                      </div>
+                      <div class="info">
+                          <h2>
+                              <a href="#">David</a>
+                          </h2>
+                          <h3>
+                              <a href="#">Web Developer</a>
+                          </h3>
+                      </div>
+                      <div class="content">
+                          <div class="description">
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi soluta assumenda, itaque earum, consectetur consequatur iure amet! Numquam, odio earum!</p>
+                          </div>
+                          <div class="star-icon">
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-half"></i>
+                              </span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="item">
+                  <div class="testimonial-item">
+                      <div class="img-thumb">
+                          <img src="img/t2.jpg" alt="Smith">
+                      </div>
+                      <div class="info">
+                          <h2>
+                              <a href="#">Smith</a>
+                          </h2>
+                          <h3>
+                              <a href="#">Web Designer</a>
+                          </h3>
+                      </div>
+                      <div class="content">
+                          <div class="description">
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi soluta assumenda, itaque earum, consectetur consequatur iure amet! Numquam, odio earum!</p>
+                          </div>
+                          <div class="star-icon">
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-half"></i>
+                              </span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="item">
+                  <div class="testimonial-item">
+                      <div class="img-thumb">
+                          <img src="img/t3.jpg" alt="Florian">
+                      </div>
+                      <div class="info">
+                          <h2>
+                              <a href="#">Florian</a>
+                          </h2>
+                          <h3>
+                              <a href="#">Web Developer</a>
+                          </h3>
+                      </div>
+                      <div class="content">
+                          <div class="description">
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi soluta assumenda, itaque earum, consectetur consequatur iure amet! Numquam, odio earum!</p>
+                          </div>
+                          <div class="star-icon">
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-half"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-half"></i>
+                              </span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="item">
+                  <div class="testimonial-item">
+                      <div class="img-thumb">
+                          <img src="img/t4.jpg" alt="Max">
+                      </div>
+                      <div class="info">
+                          <h2>
+                              <a href="#">Max</a>
+                          </h2>
+                          <h3>
+                              <a href="#">Web Developer</a>
+                          </h3>
+                      </div>
+                      <div class="content">
+                          <div class="description">
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi soluta assumenda, itaque earum, consectetur consequatur iure amet! Numquam, odio earum!</p>
+                          </div>
+                          <div class="star-icon">
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="item">
+                  <div class="testimonial-item">
+                      <div class="img-thumb">
+                          <img src="img/t5.jpg" alt="ALBERT">
+                      </div>
+                      <div class="info">
+                          <h2>
+                              <a href="#">ALBERT</a>
+                          </h2>
+                          <h3>
+                              <a href="#">Graphics Designer</a>
+                          </h3>
+                      </div>
+                      <div class="content">
+                          <div class="description">
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi soluta assumenda, itaque earum, consectetur consequatur iure amet! Numquam, odio earum!</p>
+                          </div>
+                          <div class="star-icon">
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-filled"></i>
+                              </span>
+                              <span>
+                                  <i class="lni lni-star-half"></i>
+                              </span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
       </div>
     </div>
-  </div>
-  </div>
-</div>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
